# EX01-HelloWorld

./: CMakeLists.txt  README.md  qemu-ubuntu.bat  qemu-ubuntu.sh
src/: main.c  main.s
